Closed
Bug 822089
Opened 13 years ago
Closed 13 years ago
Background compilation broke JIT Inspector ion profiling
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: evilpies, Assigned: bhackett1024)
References
Details
Attachments
(1 file)
|
1.22 KB,
patch
|
dvander
:
review+
|
Details | Diff | Splinter Review |
The ion activity is blank after the 2012-12-14 nightly
Comment 1•13 years ago
|
||
Do you get it non-blank in earlier nightlies? I tried a 2012-12-01 nightly last night, and got blank there too. :( But that was using the actual mozilla.org nightly, not my own build, if that matters.
Comment 2•13 years ago
|
||
I have no idea what I was seeing in comment 1. I just re-bisected on nightlies, and the regression range is http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=4dfe323a663d&tochange=634180132e68
Sadly it has 200+ changesets in it. :(
Comment 3•13 years ago
|
||
Turning off background ion compilation fixes this, as Brian surmised...
Blocks: 813559
Summary: Something broke JIT Inspector ion profiling → Background compilation broke JIT Inspector ion profiling
| Assignee | ||
Comment 4•13 years ago
|
||
We attach Ion profiling information to scripts during code generation, which happens off thread with background compilation and isn't allowed to mutate VM state. Right now it just doesn't generate profiles when running off the main thread. Rather than restructuring this so that we can attach profiles with background compilation, this patch just does compilation on the main thread when we are profiling scripts.
Assignee: general → bhackett1024
Attachment #693141 -
Flags: review?(dvander)
Updated•13 years ago
|
Attachment #693141 -
Flags: review?(dvander) → review+
| Assignee | ||
Comment 5•13 years ago
|
||
Comment 6•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
You need to log in
before you can comment on or make changes to this bug.
Description
•