Bug 822089 - Don't compile off thread when profiling scripts, r=dvander.